<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="10dp"
    card_view:cardElevation="5dp"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="10dp"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ectstxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/ects"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/periodtxt"
            android:layout_toEndOf="@+id/periodtxt" />

        <TextView
            android:id="@+id/periodtxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/period"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/nameTxt"
            android:layout_toEndOf="@+id/nameTxt" />

        <TextView
            android:id="@+id/gradetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/grade"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/ectstxt"
            android:layout_toEndOf="@+id/ectstxt" />
    </RelativeLayout>
</android.support.v7.widget.CardView>